# la_vector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp
.github/workflows/: build.yml
include/: la_vector.hpp  piecewise_linear_model.hpp
test/: CMakeLists.txt  tests.cpp
